<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    app:layoutDescription="@xml/library_tab_animation"
    tools:progress="0">

    <ImageView
        android:id="@+id/back_image"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:scaleType="centerCrop"
        android:scaleX="1.1"
        android:scaleY="1.1"
        android:src="@drawable/photo"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/gradient_back"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:background="@drawable/library_back_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/status_bar_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/status_bar"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
    </FrameLayout>

    <TextView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:gravity="center_vertical"
        android:paddingStart="25dp"
        android:paddingEnd="0dp"
        android:text="@string/library"
        android:textColor="@color/FlatWhite"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status_bar_parent" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/search_view_background"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="@+id/gradient_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/search_view"
        app:layout_constraintTop_toBottomOf="@+id/search_view"
        app:layout_constraintVertical_bias="0.192"
        app:tabGravity="fill"
        app:tabIndicatorColor="#44444444"
        app:tabMode="scrollable"
        app:tabSelectedTextColor="@color/FlatWhite"
        app:tabTextAppearance="@style/MyTabLayoutTextAppearance"
        app:tabTextColor="#88F5F5F5">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/songs" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Playlists" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Artists" />
    </com.google.android.material.tabs.TabLayout>

    <View
        android:id="@+id/back_color_view"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@color/library_back_color"
        app:layout_constraintEnd_toEndOf="@id/tab_layout"
        app:layout_constraintStart_toStartOf="@id/view_pager"
        app:layout_constraintTop_toTopOf="@+id/view_pager" />


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="509dp"
        android:background="@drawable/library_back_gradient"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/primary"
        app:menu="@menu/menu_navigation"
        app:layout_constraintBottom_toBottomOf="@+id/view_pager"/>


</androidx.constraintlayout.motion.widget.MotionLayout>
